# pixoo-spinner

./: .gitignore  README.md  pyproject.toml
pixoo_spinner/: __init__.py  cli.py  spinner.py
